# django-cities-light

./: CHANGELOG  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: django.yml  python-publish.yml
src/cities_light/: abstract_models.py  downloader.py  settings.py  validators.py
src/cities_light/contrib/: restframework3.py
src/cities_light/management/commands/: cities_light.py  cities_light_fixtures.py
src/cities_light/migrations/: 0014_fix_search_names_index.py  0015_city_slug_unique_with_region_subregion.py
src/cities_light/tests/: test_import.py  test_models.py
